about&key-feture

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Market-Place</title>
+    <title>ReadyClassify</title>
     <!-- Inter font from Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1835,7 +1835,7 @@
 
 
         <!-- FAQ -->
-        <section class="rs-faq-area relative max-w-2lg mx-auto px-4 py-[140px]">
+        <section class="rs-faq-area relative max-w-2lg mx-auto px-4 py-[140px] overflow-hidden">
             <div class="grid grid-cols-12 gap-10">
                 <div class="col-span-12 xl:col-span-6">
                     <div class="section-title-wrapper">
@@ -2074,8 +2074,8 @@
         <div class="rs-footer-shape absolute"></div>
         <div class="max-w-2lg mx-auto px-4">
             <div class="grid grid-cols-12 gap-6">
-                <div class="col-span-12 lg:col-span-4 llg:col-span-4">
-                    <div class="rs-footer-logo mb-6">
+                <div class="col-span-12 lg:col-span-4 md:col-span-6 llg:col-span-4">
+                    <div class="rs-footer-widget-1 rs-footer-logo mb-6">
                         <a href="#"><img src="./assets/img/logo/footer-logo.png" alt="" srcset=""></a>
                     </div>
                     <p class="rs-footer-text text-sm font-normal leading-[150%] pb-6 text-[rgba(255,255,255,0.6)]">
@@ -2109,8 +2109,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-span-12 lg:col-span-2 llg:col-span-2">
-                    <div class="rs-footer-menu">
+                <div class="col-span-12 lg:col-span-2 md:col-span-3 llg:col-span-2">
+                    <div class="rs-footer-widget-1 rs-footer-menu">
                         <h3 class="text-lg font-semibold leading-[144%] mb-3">Company</h3>
                         <ul>
                             <li><a href="#">About Us</a></li>
@@ -2121,8 +2121,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-span-12 lg:col-span-2 llg:col-span-2">
-                    <div class="rs-footer-menu">
+                <div class="col-span-12 lg:col-span-2 md:col-span-3 llg:col-span-2">
+                    <div class="rs-footer-widget-1 rs-footer-menu">
                         <h3 class="text-lg font-semibold leading-[144%] mb-3">Quick Links</h3>
                         <ul>
                             <li><a href="#">Software Demo</a></li>
@@ -2133,7 +2133,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-span-12 lg:col-span-4 llg:col-span-4">
+                <div class="col-span-12 lg:col-span-4 md:col-span-12 llg:col-span-4">
                     <div
                         class="rs-footer-widget relative bg-[rgba(29,30,36,0.12)] p-4 rounded-2xl border border-[rgba(244,238,238,0.37)]">
                         <h3 class="font-semibold text-base md:text-xl mb-3">WhatsApp Support Available</h3>
@@ -2176,7 +2176,7 @@
         </div>
         <div
             class="rs-copyright-area mt-[60px] text-center] border-t border-[rgba(255,255,255,0.12)] h-[36px] flex items-center justify-center">
-            <a class="text-xs font-normal" href="#">© 2026 All rights reserved. Developed by Razinsoft</a>
+            <a class="text-xs font-normal px-4" href="#">© 2026 All rights reserved. Developed by Razinsoft</a>
         </div>
     </footer>
 
