--- a/pages/customization.html
+++ b/pages/customization.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
 
@@ -353,11 +355,163 @@
     <main class="min-h-screen ">
         <!-- breadcrumb -->
         <section
-            class="rs-breadcrumb-area max-w-2lg mx-auto px-4  bg-[url('../assets/img/bg/breadcrumb-bg.jpg')] bg-cover bg-center relative overflow-hidden mb-10 z-[1]">
-            <div class="rs-breadcrumb-content pt-[60px] pb-[60px] text-center">
-                <h1 class="rs-breadcrumb-title font-bold text-5xl leading-[117%] mb-10">
-                   We Use <br> Agile Customization Methodology
+            class="rs-breadcrumb-area rs-customization-breadcrumb max-w-2lg mx-auto px-4  bg-[url('../assets/img/bg/breadcrumb-bg.jpg')] bg-cover bg-center relative overflow-hidden mb-[50px] z-[1]">
+            <div class="rs-breadcrumb-content pt-[60px] pb-[60px]">
+                <h1 class="rs-breadcrumb-title font-bold text-5xl leading-[117%] mb-10 text-center">
+                    We Use <br> Agile Customization Methodology
                 </h1>
+                <div class="customization-wrapper flex items-center gap-6 justify-center flex-wrap">
+                    <div
+                        class="customization-box linear-bg-border relative border border-[rgba(244,238,238,0.20)] w-[408px]  bg-[rgba(255,255,255,0.08)] p-6 rounded-2xl overflow-hidden">
+                        <div class="w-full flex items-center justify-between mb-3">
+                            <span class="text-[32px] font-bold text-transparent stroke-text outline-text font-poppins">
+                                1
+                            </span>
+                            <img src="../assets/img/icons/customization-01.svg" alt="">
+                        </div>
+                        <h2 class="font-medium text-2xl leading-[133%] mb-1">
+                            Complete Purchase
+                        </h2>
+                        <p class="text-sm font-normal leading-[157%] text-[rgba(255,255,255,0.8)]">
+                            Purchase the script from CodeCanyon.
+                        </p>
+                    </div>
+                    <div
+                        class="customization-box linear-bg-border relative border border-[rgba(244,238,238,0.20)] w-[408px]  bg-[rgba(255,255,255,0.08)] p-6 rounded-2xl overflow-hidden">
+                        <div class="w-full flex items-center justify-between mb-3">
+                            <span class="text-[32px] font-bold text-transparent stroke-text outline-text font-poppins">
+                                2
+                            </span>
+                            <img src="../assets/img/icons/customization-02.svg" alt="">
+                        </div>
+                        <h2 class="font-medium text-2xl leading-[133%] mb-1">
+                            Submit Requirements
+                        </h2>
+                        <p class="text-sm font-normal leading-[157%] text-[rgba(255,255,255,0.8)]">
+                            Discuss requirements and implement them accordingly.
+                        </p>
+                    </div>
+                    <div
+                        class="customization-box linear-bg-border relative border border-[rgba(244,238,238,0.20)] w-[408px]  bg-[rgba(255,255,255,0.08)] p-6 rounded-2xl overflow-hidden">
+                        <div class="w-full flex items-center justify-between mb-3">
+                            <span class="text-[32px] font-bold text-transparent stroke-text outline-text font-poppins">
+                                3
+                            </span>
+                            <img src="../assets/img/icons/customization-01.svg" alt="">
+                        </div>
+                        <h2 class="font-medium text-2xl leading-[133%] mb-1">
+                            Price Quotation
+                        </h2>
+                        <p class="text-sm font-normal leading-[157%] text-[rgba(255,255,255,0.8)]">
+                            Get a quotation according to your requirements.
+                        </p>
+                    </div>
+                    <div
+                        class="customization-box linear-bg-border relative border border-[rgba(244,238,238,0.20)] w-[408px]  bg-[rgba(255,255,255,0.08)] p-6 rounded-2xl overflow-hidden">
+                        <div class="w-full flex items-center justify-between mb-3">
+                            <span class="text-[32px] font-bold text-transparent stroke-text outline-text font-poppins">
+                                4
+                            </span>
+                            <img src="../assets/img/icons/customization-04.svg" alt="">
+                        </div>
+                        <h2 class="font-medium text-2xl leading-[133%] mb-1">
+                            Development
+                        </h2>
+                        <p class="text-sm font-normal leading-[157%] text-[rgba(255,255,255,0.8)]">
+                            Build the project according to the requirements.
+                        </p>
+                    </div>
+                    <div
+                        class="customization-box linear-bg-border relative border border-[rgba(244,238,238,0.20)] w-[408px]  bg-[rgba(255,255,255,0.08)] p-6 rounded-2xl overflow-hidden">
+                        <div class="w-full flex items-center justify-between mb-3">
+                            <span class="text-[32px] font-bold text-transparent stroke-text outline-text font-poppins">
+                                5
+                            </span>
+                            <img src="../assets/img/icons/customization-05.svg" alt="">
+                        </div>
+                        <h2 class="font-medium text-2xl leading-[133%] mb-1">
+                            Complete Testing
+                        </h2>
+                        <p class="text-sm font-normal leading-[157%] text-[rgba(255,255,255,0.8)]">
+                            We deliver the products maintaining top quality.
+                        </p>
+                    </div>
+                    <div
+                        class="customization-box linear-bg-border relative border border-[rgba(244,238,238,0.20)] w-[408px]  bg-[rgba(255,255,255,0.08)] p-6 rounded-2xl overflow-hidden">
+                        <div class="w-full flex items-center justify-between mb-3">
+                            <span class="text-[32px] font-bold text-transparent stroke-text outline-text font-poppins">
+                                6
+                            </span>
+                            <img src="../assets/img/icons/customization-06.svg" alt="">
+                        </div>
+                        <h2 class="font-medium text-2xl leading-[133%] mb-1">
+                            Delivery
+                        </h2>
+                        <p class="text-sm font-normal leading-[157%] text-[rgba(255,255,255,0.8)]">
+                            Guaranteed on-time delivery every time.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- collaborate -->
+        <section class="rs-collaborate-area max-w-2lg mx-auto px-4 mb-[80px]">
+            <div class="grid grid-cols-12 gap-1 sm:gap-10">
+                <div class="col-span-12 lg:col-span-6">
+                    <div class="rs-collaborate-thumb relative ml-[68px]">
+                        <img class="rounded-2xl" src="../assets/img/collaborate/collaborate-01.jpg" alt="">
+                        <div class="absolute z-[1] absolute bottom-[16px] left-1/2 -translate-x-1/2 w-full px-4">
+                            <p class="text-lg font-normal leading-[167%] mb-4">
+                                Need Urgent Help? <br>
+                                Call Us at <a href="tel:+8801768572658" class="duration-300 ease-in-out">
+                                    📞+88 01768572658</a> or Connect With Us on Social Media
+                            </p>
+                            <div class="flex items-center justify-between gap-2">
+                                <a href="mailto:support@razinsoft.com"
+                                    class="rs-contact-btn text-sm font-normal flex items-center gap-[10.25px] relative rounded-[8px] h-[48px] w-[33%] justify-center bg-[linear-gradient(90deg,rgba(255,254,254,0.08)_0%,rgba(0,0,0,1)_50%,rgba(255,254,254,0.08)_100%)] overflow-hidden">
+                                    <img src="../assets/img/icons/envelope-white.svg" alt="">
+                                    Directly Email
+                                    <span
+                                        class="border-anim border-anim-2 bg-gradient-[131.52deg,rgba(0,0,0,0)_0%,rgba(221,84,84,0.686)_50%,rgba(0,0,0,0)_100%]"></span>
+                                </a>
+                                <a href="tel:+8801768572658"
+                                    class="rs-contact-btn text-sm font-normal flex items-center gap-[10.25px] relative rounded-[8px] h-[48px] w-[33%] justify-center bg-[linear-gradient(90deg,rgba(255,254,254,0.08)_0%,rgba(0,0,0,1)_50%,rgba(255,254,254,0.08)_100%)] overflow-hidden">
+                                    <img src="../assets/img/icons/whatsapp-white.svg" alt="">
+                                    WhatsApp
+                                    <span
+                                        class="border-anim border-anim-2 bg-gradient-[131.52deg,rgba(0,0,0,0)_0%,rgba(221,84,84,0.686)_50%,rgba(0,0,0,0)_100%]"></span>
+                                </a>
+                                <a href="#"
+                                    class="rs-contact-btn text-sm font-normal flex items-center gap-[10.25px] relative rounded-[8px] h-[48px] w-[33%] justify-center bg-[linear-gradient(90deg,rgba(255,254,254,0.08)_0%,rgba(0,0,0,1)_50%,rgba(255,254,254,0.08)_100%)] overflow-hidden">
+                                    <img src="../assets/img/icons/messenger-white.svg" alt="">
+                                    Messenger
+                                    <span
+                                        class="border-anim border-anim-2 bg-gradient-[131.52deg,rgba(0,0,0,0)_0%,rgba(221,84,84,0.686)_50%,rgba(0,0,0,0)_100%]"></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-12 lg:col-span-6">
+                    <form action="#" class="rs-collaborate-form">
+                        <h3 class="text-5xl font-semibold leading-[117%] mb-[22px]">
+                            Let’s Collaborate Now!
+                        </h3>
+                        <label class="text-lg font-medium mb-4 block">Your Email</label>
+                        <input type="email" placeholder="Input Your Email" class="rs-collaborate-form w-full h-[56px] px-4 rounded-[12px] bg-[rgba(255,255,255,0.12)] border border-transparent text-gray-100 placeholder-gray-500 font-normal text-base 
+                        focus:border-red-500 focus:text-gray-100 focus:placeholder-transparent outline-none mb-4">
+                        <label class="text-lg font-medium mb-4 block">Subject</label>
+                        <input type="text" placeholder="Input Your Subject" class="rs-collaborate-form w-full h-[56px] px-4 rounded-[12px] bg-[rgba(255,255,255,0.12)] border border-transparent text-gray-100 placeholder-gray-500 font-normal text-base 
+                        focus:border-red-500 focus:text-gray-100 focus:placeholder-transparent outline-none mb-4">
+                        <label class="text-lg font-medium mb-4 block">Subject</label>
+                        <textarea name="message" placeholder="Input Your Message" class="rs-collaborate-form w-full h-[132px] px-4 rounded-[12px] bg-[rgba(255,255,255,0.12)] border border-transparent text-gray-100 placeholder-gray-500 font-normal text-base focus:border-red-500 focus:text-gray-100 focus:placeholder-transparent outline-none mb-4 pt-4"></textarea>
+                         <div class="common-btn rs-buy-now-btn ml-0 mr-0 llg:ml-auto llg:mr-2 md:ml-auto md:mr-2 lg:ml-0 lg:mr-0">
+                            <button type="submit" class="text-base font-medium text-primary h-12 w-[172px] px-6">Submit <span class="border-anim"></span>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
