--- a/pages/key-feature.html
+++ b/pages/key-feature.html
@@ -353,103 +353,126 @@
     <main class="min-h-screen ">
         <!-- breadcrumb -->
         <section
-            class="rs-breadcrumb-area max-w-2lg mx-auto px-4  bg-[url('../assets/img/bg/breadcrumb-bg.jpg')] bg-cover bg-center relative overflow-hidden mb-10 z-[1]">
-            <div class="rs-breadcrumb-content pt-[60px] pb-[60px] text-center">
-                <h1 class="rs-breadcrumb-title font-bold text-5xl leading-[117%] mb-3">
-                    Key Feature Of Ready MarketPlace
-                </h1>
-                <p class="rs-breadcrumb-text text-lg font-light leading-[144%] mb-4">
-                    Customers can utilize the customer app to conveniently browse products, make purchases, track
-                    orders, and stay <br> updated s, experience and fostering brand loyalty.
-                </p>
-                <!-- Tabs -->
-                <div
-                    class="rs-tab-btn h-[72px] p-3 bg-[rgba(255,255,255,0.08)] backdrop-blur-[10px] rounded-lg w-[572px] m-auto flex items-center justify-between gap-4 mb-[32px]">
-                    <button
-                        class="font-normal text-base h-12 bg-[rgba(255,255,255,0.08)] rounded-lg w-[33%] active relative"
-                        data-category="website">Website</button>
-                    <button class="font-normal text-base h-12 bg-[rgba(255,255,255,0.08)] rounded-lg w-[33%] relative"
-                        data-category="mobile-app">Mobile App</button>
-                    <button class="font-normal text-base h-12 bg-[rgba(255,255,255,0.08)] rounded-lg w-[33%] relative"
-                        data-category="admin-panel">Admin Panel</button>
+            class="rs-breadcrumb-area  bg-[url('../assets/img/bg/breadcrumb-bg.jpg')] bg-cover bg-center relative overflow-hidden mb-10 z-[1]">
+            <div class="max-w-2lg mx-auto px-4">
+                <div class="rs-breadcrumb-content pt-[60px] pb-[60px] text-center">
+                    <h1 class="rs-breadcrumb-title font-bold text-5xl leading-[117%] mb-3">
+                        Key Feature Of Ready MarketPlace
+                    </h1>
+                    <p class="rs-breadcrumb-text text-lg font-light leading-[144%] mb-4">
+                        Customers can utilize the customer app to conveniently browse products, make purchases, track
+                        orders, and stay <br> updated s, experience and fostering brand loyalty.
+                    </p>
+                    <!-- Tabs -->
+                    <div
+                        class="rs-tab-btn-2 h-[72px] p-3 bg-[rgba(255,255,255,0.08)] backdrop-blur-[10px] rounded-lg w-[572px] m-auto flex items-center justify-between gap-4 mb-[32px]">
+                        <button class="font-normal text-base h-12 bg-[rgba(255,255,255,0.08)] rounded-lg w-[33%] active relative"
+                            data-category="website">Website</button>
+                        <button class="font-normal text-base h-12 bg-[rgba(255,255,255,0.08)] rounded-lg w-[33%] relative"
+                            data-category="mobile-app">Mobile App</button>
+                        <button class="font-normal text-base h-12 bg-[rgba(255,255,255,0.08)] rounded-lg w-[33%] relative"
+                            data-category="admin-panel">Admin Panel</button>
+                    </div>
                 </div>
             </div>
         </section>
 
+
+        <!-- Gallery Section -->
         <div class="max-w-2lg mx-auto px-4 mt-6 mb-10">
-            <div class="grid grid-cols-12 gap-[30px]">
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+            <div class="grid grid-cols-12 gap-2 sm:gap-[30px]">
+
+                <!-- WEBSITE -->
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 website">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/website-01.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">Home Page
-                        </h3>
+                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            Home Page</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 website">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/website-02.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">Product
-                        </h3>
+                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            Product</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 website">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/website-03.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">My Wallet
-                        </h3>
+                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            My Wallet</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+
+                <!-- MOBILE APP -->
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 mobile-app">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/mobile-app-01.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">Admin Dashboard
-                        </h3>
+                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            Admin Dashboard</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 mobile-app">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/mobile-app-02.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">User Management
-                        </h3>
+                        <h3
+                            class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            User Management</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 mobile-app">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/mobile-app-03.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">General Setting
-                        </h3>
+                        <h3
+                            class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            General Setting</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+
+                <!-- ADMIN PANEL -->
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 admin-panel">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/admin-panel-01.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">Home, Product Details, Profile
-                        </h3>
+                        <h3
+                            class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            Home, Product Details, Profile</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 admin-panel">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/admin-panel-02.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">Wallet, Add Wallet, Notification 
-                        </h3>
+                        <h3
+                            class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            Wallet, Add Wallet, Notification</h3>
                     </div>
                 </div>
-                <div class="col-span-4">
-                    <div class="rs-website-thumb relative">
+
+                <div class="col-span-12 sm:col-span-6 lg:col-span-4 admin-panel">
+                    <div class="rs-website-thumb relative  max-h-[318px]">
                         <img class="w-[480px] h-[318px] rounded-lg object-cover"
                             src="../assets/img/key-feature/admin-panel-03.jpg" alt="">
-                        <h3 class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">Massage List, Chat, Post Ad
-                        </h3>
+                        <h3
+                            class="w-full text-center text-lg font-medium absolute left-1/2 -translate-x-1/2 bottom-5 z-[1]">
+                            Massage List, Chat, Post Ad</h3>
                     </div>
                 </div>
+
             </div>
         </div>
     </main>
